print git state

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -64,6 +64,7 @@ jobs:
           git diff --staged
           echo "::set-output name=gogenerate::$(sed -ze 's/%/%25/g;s/\n/%0A/g' gogenerate.log)"
           git_state=$(wc -l < gogenerate.log)
+          echo "git state ${git_state}"
           [[ $git_state -ne 0 ]] && exit 1
 
       - name: Fetch base branch
