--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -55,17 +55,16 @@ jobs:
           
           GO111MODULE=off go get -u github.com/jteeuwen/go-bindata/...
           
-          bindata_version=$(go-bindata --version)
-          echo "go-bindata version ${bindata_version}"
-          
           go generate ./...
           git add --all
           git diff-index HEAD > gogenerate.log
-          git diff --staged
           echo "::set-output name=gogenerate::$(sed -ze 's/%/%25/g;s/\n/%0A/g' gogenerate.log)"
-          git_state=$(wc -l < gogenerate.log)
-          echo "git state ${git_state}"
-          exit $git_state
+          git_state_count=$(wc -l < gogenerate.log)
+          
+          if [[ $git_state_count -ne 0 ]]
+          then 
+            exit 1
+          fi
 
       - name: Fetch base branch
         if: ${{ github.event_name == 'pull_request' }}
