--- a/ci/tests/python-plugins/docker-compose.yml
+++ b/ci/tests/python-plugins/docker-compose.yml
@@ -4,6 +4,12 @@ services:
     image: redis
     ports:
       - "0.0.0.0:6379:6379"
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      interval: 5s
+      retries: 10
+      start_period: 2s
+      timeout: 10s
 
   bundler:
     build:
@@ -12,7 +18,7 @@ services:
         - tag=${tag}
       
   gw:
-    image: tykio/tyk-gateway:${tag}
+    image: tykio/tyk-gateway:v4.0.0
     volumes:
       - ./src/apidef.json:/opt/tyk-gateway/apps/python.json
       - ./src/tyk.conf:/opt/tyk-gateway/tyk.conf
@@ -20,3 +26,17 @@ services:
       - "0.0.0.0:8080:8080"
     environment:
       - TYK_LOGLEVEL=debug
+    healthcheck:
+      test: curl --fail http://localhost:8080/hello || exit 1
+      interval: 5s
+      retries: 10
+      start_period: 2s
+      timeout: 10s
+  wait:
+    image: hello-world:linux
+    depends_on:
+        gw:
+            condition: service_healthy
+        redis:
+            condition: service_healthy
+      
