--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -338,7 +338,7 @@ jobs:
           push: false
 
   smoke-tests:
-    if: false
+    if: needs.goreleaser.outputs.upload == 'true'
     needs:
       - goreleaser
     runs-on: ubuntu-latest
