--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -337,40 +337,40 @@ jobs:
           file: Dockerfile
           push: false
 
-  smoke-tests:
-    if: needs.goreleaser.outputs.upload == 'true'
-    needs:
-      - goreleaser
-    runs-on: ubuntu-latest
+#   smoke-tests:
+#     if: needs.goreleaser.outputs.upload == 'true'
+#     needs:
+#       - goreleaser
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           fetch-depth: 1
 
-      - name: Run tests
-        shell: bash
-        run: |
-          set -eaxo pipefail
-          if [ ! -d integration/smoke-tests ]; then
-             echo "::warning No smoke tests defined"
-             exit 0
-          fi
-          for d in integration/smoke-tests/*/
-          do
-              echo Attempting to test $d
-              if [ -d $d ]; then
-                  cd $d
-                  ./test.sh ${{ needs.goreleaser.outputs.tag }}
-                  cd -
-              fi
-          done
+#       - name: Run tests
+#         shell: bash
+#         run: |
+#           set -eaxo pipefail
+#           if [ ! -d integration/smoke-tests ]; then
+#              echo "::warning No smoke tests defined"
+#              exit 0
+#           fi
+#           for d in integration/smoke-tests/*/
+#           do
+#               echo Attempting to test $d
+#               if [ -d $d ]; then
+#                   cd $d
+#                   ./test.sh ${{ needs.goreleaser.outputs.tag }}
+#                   cd -
+#               fi
+#           done
 
 
   packagecloud:
     if: needs.goreleaser.outputs.upload == 'true'
     needs:
-      - smoke-tests
+#       - smoke-tests
       - goreleaser
     runs-on: ubuntu-latest
 
