bugfix: Downgrade protobuf version for python 3.7

--- a/Dockerfile.std
+++ b/Dockerfile.std
@@ -15,7 +15,7 @@ RUN apt-get install -y python3-setuptools libpython3.7 python3.7-dev curl \
     && curl https://bootstrap.pypa.io/get-pip.py | python3 \
     && rm -rf /usr/include/* && rm /usr/lib/*-linux-gnu/*.a && rm /usr/lib/*-linux-gnu/*.o \
     && rm /usr/lib/python3.7/config-3.7m-*-linux-gnu/*.a \
-    && pip3 install --only-binary ":all:" grpcio protobuf \
+    && pip3 install --only-binary ":all:" grpcio protobuf==3.20.1 \
     && apt-get autoremove -y \
     && rm -rf /root/.cache \
     && rm -rf /var/lib/apt/lists/*
