--- a/ci/goreleaser/goreleaser.yml
+++ b/ci/goreleaser/goreleaser.yml
@@ -182,6 +182,7 @@ dockers:
     - tykio/tyk-plugin-compiler:{{ .Tag }}
     - "tykio/tyk-plugin-compiler:v{{ .Major }}.{{ .Minor }}{{.Prerelease}}"
   build_flag_templates:
+    - "--platform=linux/amd64"
     - "--label=org.opencontainers.image.created={{.Date}}"
     - "--label=org.opencontainers.image.title=tyk-plugin-compiler"
     - "--label=org.opencontainers.image.revision={{.FullCommit}}"
@@ -219,6 +220,49 @@ dockers:
     - trace
     - user
 
+# Build plugin-compiler
+- ids:
+    - std-arm64
+  image_templates:
+    - tykio/tyk-plugin-compiler:{{ .Tag }}-arm64
+    - "tykio/tyk-plugin-compiler:v{{ .Major }}.{{ .Minor }}{{.Prerelease}}-arm64"
+  build_flag_templates:
+    - "--label=org.opencontainers.image.created={{.Date}}"
+    - "--label=org.opencontainers.image.title=tyk-plugin-compiler-arm64"
+    - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+    - "--label=org.opencontainers.image.version={{.Version}}"
+    - "--build-arg=TYK_GW_TAG={{ .Tag }}"
+    - "--build-arg=GOLANG_CROSS={{ .Env.GOLANG_CROSS }}"
+  goarch: arm64
+  goos: linux
+  dockerfile: ci/images/plugin-compiler/Dockerfile
+  extra_files:
+    - ci/images/plugin-compiler
+    - go.mod
+    - apidef
+    - certs
+    - checkup
+    - cli
+    - config
+    - coprocess
+    - ctx
+    - dlpython
+    - dnscache
+    - gateway
+    - goplugin
+    - headers
+    - log
+    - regexp
+    - request
+    - rpc
+    - signature_validator
+    - storage
+    - tcp
+    - templates
+    - test
+    - testdata
+    - trace
+    - user
 
 docker_manifests:
   - name_template: tykio/tyk-gateway:{{ .Tag }}
