--- a/.github/workflows/update-tyk-analytics.yml
+++ b/.github/workflows/update-tyk-analytics.yml
@@ -16,7 +16,13 @@ jobs:
     steps:
       - uses: peter-evans/repository-dispatch@v1
         with:
-          token: ${{ secrets.TYK_ANALYTICS_TOKEN }}
+          token: ${{ secrets.ORG_GH_TOKEN }}
           repository: TykTechnologies/tyk-analytics
+          event-type: new-tyk
+          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+      - uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.ORG_GH_TOKEN }}
+          repository: TykTechnologies/tyk-sink
           event-type: new-tyk
           client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
