disabled all workflows(LOL)  and draft update

--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -1,12 +1,7 @@
 name: API integration Tests
 
 on:
-  pull_request:
-  push:
-    branches:
-      - master
-      - test/*
-      - release-*
+  workflow_dispatch:
 
 env:
   GOPRIVATE: github.com/TykTechnologies
