--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,12 +1,7 @@
 name: golangci-lint
 
 on:
-  push:
-    tags:
-      - v*
-    branches:
-      - master
-  pull_request:
+  workflow_dispatch:
 
 jobs:
   golangci:
