--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -25,28 +25,12 @@ jobs:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
           terraform_wrapper: false
 
-      - name: Terraform Format
-        working-directory: ./ci/terraform
-        id: fmt
-        run: terraform fmt -check
-
-      - name: Terraform Workspace
-        working-directory: ./ci/terraform
-        run: terraform workspace select ${CLUSTER}
-        
-      - name: Terraform Init
-        working-directory: ./ci/terraform
-        id: init
-        run: terraform init
-
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate -no-color
-
-      - name: Get AWS creds from Terraform remote state
+      - name: Get AWS creds from Terraform remote state [Credentials]
         id: aws-creds
-        working-directory: ./ci/terraform
+        working-directory: ./ci/terraform/credentials
         run: |
+          terraform fmt -check
+          terraform init
           terraform refresh 2>&1 >/dev/null
           eval $(terraform output -json cd | jq -r 'to_entries[] | [.key,.value] | join("=")')
           region=$(terraform output region | xargs)
@@ -55,6 +39,23 @@ jobs:
           echo "::set-output name=key::$key"
           echo "::set-output name=region::$region"
 
+      - name: Terraform Format
+        working-directory: ./ci/terraform
+        id: fmt
+        run: terraform fmt -check
+
+      - name: Terraform Init
+        working-directory: ./ci/terraform
+        id: init
+        run: terraform init
+
+      - name: Terraform Workspace
+        working-directory: ./ci/terraform
+        run: terraform workspace select ${CLUSTER}
+
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
 
       - name: Configure AWS credentials for use
         uses: aws-actions/configure-aws-credentials@v1
