--- a/.github/workflows/persistent-env.yml
+++ b/.github/workflows/persistent-env.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   Create:
-    if: ${{ env.ENV_EXIST != true }}
+    if: ${{ ENV_EXIST != true }}
     runs-on: ubuntu-latest
     
     steps:
