--- a/.github/workflows/persistent-env-check.yml
+++ b/.github/workflows/persistent-env-check.yml
@@ -11,112 +11,59 @@ env:
   ENV_EXIST: 'true'
 
 jobs:
-  Create:
-    # needs:
-    #   - Check
-    runs-on: ubuntu-latest
+  Create-workflow:
+    uses: ./.github/workflows/create-persistent-env.yml
+    with:
+      service: ${{ env.SERVICE }}
+      container_name: ${{ env.CONTAINER_NAME }}
+			cluster: ${{ env.CLUSTER }}
+      exist: ${{ env.ENV_EXIST }}
     
-    steps:
-      - name: Checkout
-        if: env.ENV_EXIST == 'false'
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
 
-      - name: Setup Terraform
-        if: env.ENV_EXIST == 'false'
-        uses: hashicorp/setup-terraform@v1
-        with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-          terraform_wrapper: false
-      
-      - name: Terraform Format
-        if: env.ENV_EXIST == 'false'
-        working-directory: ./ci/terraform/environment
-        id: fmt
-        run: terraform fmt -check
+  # Update:
+  #   # needs:
+  #   #   - Check
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       if: env.ENV_EXIST == 'true'
+  #       uses: actions/checkout@v2
+  #       with:
+  #         fetch-depth: 1
 
-      - name: Configure AWS credentials for use
-        if: env.ENV_EXIST == 'false'
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.GROMIT_AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.GROMIT_AWS_SECRET_ACCESS_KEY }}
-          aws-region: "eu-central-1"
+  #     - name: Configure AWS credentials for use
+  #       if: env.ENV_EXIST == 'true'
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         aws-access-key-id: ${{ secrets.GROMIT_AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.GROMIT_AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: "eu-central-1"
 
-      - name: Terraform Init
-        if: env.ENV_EXIST == 'false'
-        working-directory: ./ci/terraform/environment
-        id: init
-        run: terraform init
+  #     - name: Download task definition
+  #       if: env.ENV_EXIST == 'true'
+  #       working-directory: ./ci/terraform/environment
+  #       run: |
+  #         aws ecs describe-task-definition --task-definition ${CONTAINER_NAME}-${CLUSTER}-template --query taskDefinition > task-definition.json
 
-      - name: Terraform Workspace
-        if: env.ENV_EXIST == 'false'
-        working-directory: ./ci/terraform/environment
-        run: |
-          terraform workspace new ${CLUSTER}
-          terraform workspace show
+  #     - name: Describe task definition
+  #       if: env.ENV_EXIST == 'true'
+  #       working-directory: ./ci/terraform/environment
+  #       run: cat task-definition.json
 
-      - name: Lock environment
-        if: env.ENV_EXIST == 'false'
-        run:
-          echo "CALL - Add entry on DinamoDB"
+  #     - name: Fill in the new image ID in the Amazon ECS task definition
+  #       if: env.ENV_EXIST == 'true'
+  #       id: task-def
+  #       uses: aws-actions/amazon-ecs-render-task-definition@v1.1.1
+  #       with:
+  #         task-definition: ./ci/terraform/environment/task-definition.json
+  #         container-name: ${{ env.CONTAINER_NAME }}
+  #         image: ${{ env.REGISTRY }}/${{ env.IMAGE }}
 
-      - name: Terraform Apply
-        if: env.ENV_EXIST == 'false'
-        working-directory: ./ci/terraform/environment
-        run: terraform apply -auto-approve -var-file=master.tfvars
-
-      - name: Unlock environment
-        if: env.ENV_EXIST == 'false'
-        run:
-          echo "CALL - Update entry on DinamoDB"
-
-
-  Update:
-    # needs:
-    #   - Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        if: env.ENV_EXIST == 'true'
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-
-      - name: Configure AWS credentials for use
-        if: env.ENV_EXIST == 'true'
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.GROMIT_AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.GROMIT_AWS_SECRET_ACCESS_KEY }}
-          aws-region: "eu-central-1"
-
-      - name: Download task definition
-        if: env.ENV_EXIST == 'true'
-        working-directory: ./ci/terraform/environment
-        run: |
-          aws ecs describe-task-definition --task-definition ${CONTAINER_NAME}-${CLUSTER}-template --query taskDefinition > task-definition.json
-
-      - name: Describe task definition
-        if: env.ENV_EXIST == 'true'
-        working-directory: ./ci/terraform/environment
-        run: cat task-definition.json
-
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        if: env.ENV_EXIST == 'true'
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1.1.1
-        with:
-          task-definition: ./ci/terraform/environment/task-definition.json
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ env.REGISTRY }}/${{ env.IMAGE }}
-
-      - name: Deploy to Amazon ECS
-        if: env.ENV_EXIST == 'true'
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1.4.9
-        with:
-          task-definition: ./ci/terraform/environment/task-definition.json
-          service: ${{ env.SERVICE }}
-          cluster: ${{ env.CLUSTER }}
-          wait-for-service-stability: true
+  #     - name: Deploy to Amazon ECS
+  #       if: env.ENV_EXIST == 'true'
+  #       uses: aws-actions/amazon-ecs-deploy-task-definition@v1.4.9
+  #       with:
+  #         task-definition: ./ci/terraform/environment/task-definition.json
+  #         service: ${{ env.SERVICE }}
+  #         cluster: ${{ env.CLUSTER }}
+  #         wait-for-service-stability: true
