--- a/.github/workflows/create-persistent-env.yml
+++ b/.github/workflows/create-persistent-env.yml
@@ -5,7 +5,7 @@ on:
       service:
         required: true
         type: string
-      container_name:
+      containerName:
         required: true
         type: string
 			cluster:
