--- a/.github/workflows/persistent-env-check.yml
+++ b/.github/workflows/persistent-env-check.yml
@@ -15,7 +15,7 @@ jobs:
     uses: ./.github/workflows/create-persistent-env.yml
     with:
       service: ${{ env.SERVICE }}
-      container_name: ${{ env.CONTAINER_NAME }}
+      containerName: ${{ env.CONTAINER_NAME }}
 			cluster: ${{ env.CLUSTER }}
       exist: ${{ env.ENV_EXIST }}
     
