--- a/.github/workflows/persistent-env-check.yml
+++ b/.github/workflows/persistent-env-check.yml
@@ -11,13 +11,32 @@ env:
   ENV_EXIST: 'true'
 
 jobs:
+  Check:
+    runs-on: ubuntu-latest
+    outputs: 
+      env-exist: ${{ steps.set-output-defaults.outputs.env-exist }}
+      container-name: ${{ steps.set-output-defaults.outputs.container-name }}
+      cluster: ${{ steps.set-output-defaults.outputs.cluster }}
+      service: ${{ steps.set-output-defaults.outputs.service }}
+    steps:
+      - name: Simulate outputs from the release pipeline
+        id: set-output-defaults
+        run: |
+          echo "::set-output name=env-exist::${{ env.ENV_EXIST }}"
+          echo "::set-output name=container-name::${{ env.CONTAINER_NAME }}"
+          echo "::set-output name=cluster::${{ env.CLUSTER }}"
+          echo "::set-output name=service::${{ env.SERVICE }}"
+
+
   Create-workflow:
     uses: ./.github/workflows/create-persistent-env.yml
+    needs:
+      - Check
     with:
-      service: ${{ SERVICE }}
-      containerName: ${{ CONTAINER_NAME }}
-      cluster: ${{ CLUSTER }}
-      exist: ${{ ENV_EXIST }}
+      service: ${{ needs.Check.outputs.env-exist }}
+      containerName: ${{ needs.Check.outputs.container-name }}
+      cluster: ${{ needs.Check.outputs.cluster }}
+      exist: ${{ needs.Check.outputs.service}}
     
 
   # Update:
