--- a/.github/workflows/update-persistent-env.yml
+++ b/.github/workflows/update-persistent-env.yml
@@ -35,7 +35,7 @@ env:
   IMAGE: ${{ inputs.image }}
   REGISTRY: ${{ inputs.registry }}
 
-Jobs:
+jobs:
   Update:
     runs-on: ubuntu-latest
     steps:
